# sail-tiny-arm

./: .gitignore  LICENSE  Makefile  README.md  base.sail  coq-sail-tiny-arm.install  coq-sail-tiny-arm.opam  coq-simple-arm-model.install  coq-simple-arm-model.opam  dune  dune-project  instrs-atomic.sail  instrs-sys.sail  instrs-user.sail  instrs-word.sail  interface.sail  interface_types.sail  prelude.sail  registers.sail  sail_files  simple-arm-defs.sail  simple-arm.sail  tiny-arm-defs.sail  tiny-arm.sail  translation.sail
snapshot/: System.v  System_types.v  User.v  User_types.v  _CoqProject  simpl.v  simpl_types.v
tools/: import_sail_arm_types.py
