opam-version: "2.0"
maintainer: "Sail Devs <cl-sail-dev@lists.cam.ac.uk>"
authors: [
  "Shaked Flur"
  "Brian Campbell"
  "Alasdair Armstrong"
  "Thibaut Pérami"
  "Nils Lauermann"
]
license: "BSD-3-Clause"
homepage: "https://github.com/rems-project/sail-arm"
bug-reports: "https://github.com/rems-project/sail-arm/issues"
dev-repo: "git+https://github.com/rems-project/sail-arm.git"

# Arm architecture version followed by a dash and a single incrementing number
version: "9.4-1"

synopsis: "A very simplified and cut down version of the Arm ISA sail specification, handwritten"

depends: [
  "coq" { (>= "8.15") }
  "coq-sail-stdpp"
]

build: ["%{make}%" "-j%{jobs}%"]
