(coq.theory
 (name SailTinyArm)
 (package coq-sail-tiny-arm)
 (modules
   User
   User_types
   System
   System_types
 )
 (theories stdpp stdpp.bitvector SailStdpp RecordUpdate)
)

(rule
 (deps sail_files (:sail %{read-lines:sail_files}) (env_var SAIL_OPTS) (env_var SAIL_COQ_OPTS) (package sail))
 (targets User.v User_types.v)
 (action
  (run sail %{env:SAIL_OPTS=--strict-var}
       --coq %{env:SAIL_COQ_OPTS=--coq-record-update}
       -o User %{sail}))
)

(rule
 (deps sail_files (:sail %{read-lines:sail_files}) (env_var SAIL_OPTS) (env_var SAIL_COQ_OPTS) (package sail))
 (targets System.v System_types.v)
 (action
  (run sail %{env:SAIL_OPTS=--strict-var} -D SYSTEM_TINY_ARM
       --coq %{env:SAIL_COQ_OPTS=--coq-record-update}
       -o System %{sail}))
)

(rule
 (alias snapshot)
 (mode promote)
 (action
  (concurrent
   (diff snapshot/User_types.v User_types.v)
   (diff snapshot/User.v User.v)
   (diff snapshot/System_types.v System_types.v)
   (diff snapshot/System.v System.v)
)))
