(coq.theory
 (name SailTinyArm)
 (package coq-sail-tiny-arm)
 (modules
   User
   User_types
   System
   System_types
 )
 (theories Stdlib stdpp stdpp.bitvector SailStdpp RecordUpdate Ltac2 SailArm)
)

(rule
 (deps sail_files (:sail %{read-lines:sail_files}) (env_var SAIL_OPTS) (env_var SAIL_COQ_OPTS) tools/import_sail_arm_types.py (package sail))
 (targets User.v User_types.v)
 (action
  (progn
   (run sail %{env:SAIL_OPTS=--strict-var}
        --coq %{env:SAIL_COQ_OPTS=--coq-record-update}
        -o User %{sail})
   (run ./tools/import_sail_arm_types.py User_types.v User.v)))
)

(rule
 (deps sail_files (:sail %{read-lines:sail_files}) (env_var SAIL_OPTS) (env_var SAIL_COQ_OPTS) tools/import_sail_arm_types.py (package sail))
 (targets System.v System_types.v)
 (action
  (progn
   (run sail %{env:SAIL_OPTS=--strict-var} -D SYSTEM_TINY_ARM
        --coq %{env:SAIL_COQ_OPTS=--coq-record-update}
        -o System %{sail})
   (run ./tools/import_sail_arm_types.py System_types.v System.v)))
)

(rule
 (alias snapshot)
 (mode promote)
 (action
  (concurrent
   (diff snapshot/User_types.v User_types.v)
   (diff snapshot/User.v User.v)
   (diff snapshot/System_types.v System_types.v)
   (diff snapshot/System.v System.v)
)))
